test/testdata/variables/self_referential_definition_error_global.lox
// error: a has not been declared
// lint warning: a has been used before its declaration
var a = a;
print a;
